@@ -1,3 +1,8 @@
+2015-09-15 Albert Chu <chu11@llnl.gov>
+
+	* ipmi-oem/: Update get-power-supply-status2 on Supermicro based
+	on mailing list discussion.
+
 2015-09-09 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-oem/: Support get-power-supply-status2 on Supermicro.
